test/type/fail/incompatible_method_last_statement.j
class A{
  Void main() { return;  }
}

class B {
  Int f() {
    return 5;
  }

  Void g() {
    return;
    f();
  }
}
